--- a/package.json
+++ b/package.json
@@ -32,7 +32,7 @@
   "types": "./index.d.ts",
   "dependencies": {
     "@types/jquery": "^3.2.12",
-    "bootstrap-daterangepicker": "^2.1.25",
+    "bootstrap-daterangepicker": "git+https://github.com/phattranky/bootstrap-daterangepicker.git",
     "jquery": "^3.1.1",
     "moment": "^2.16.0"
   },
