--- a/package.json
+++ b/package.json
@@ -1,7 +1,6 @@
 {
-  "name": "ng2-daterangepicker-plus",
-  "version": "3.0.0",
-  "description": "Angular 2 DaterangePicker Plus component, angular 9 supported",
+  "name": "angular9",
+  "version": "0.0.0",
   "scripts": {
     "ng": "ng",
     "start": "ng serve",
@@ -11,15 +10,6 @@
     "e2e": "ng e2e"
   },
   "private": true,
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/phattranky/ng2-daterangepicker"
-  },
-  "bugs": {
-    "url": "https://github.com/phattranky/ng2-daterangepicker/issues"
-  },
-  "homepage": "https://github.com/phattranky/ng2-daterangepicker#readme",
-  "license": "MIT",
   "dependencies": {
     "@angular/animations": "~9.0.1",
     "@angular/common": "~9.0.1",
@@ -30,13 +20,12 @@
     "@angular/platform-browser-dynamic": "~9.0.1",
     "@angular/router": "~9.0.1",
     "@types/jquery": "^3.3.32",
-    "daterangepicker": "^3.0.5",
+    "bootstrap-daterangepicker-plus": "^3.1.0",
     "jquery": "^3.5.0",
     "moment": "^2.24.0",
     "rxjs": "~6.5.4",
     "tslib": "^1.10.0",
-    "zone.js": "~0.10.2",
-    "bootstrap-daterangepicker": "git+https://github.com/phattranky/bootstrap-daterangepicker.git"
+    "zone.js": "~0.10.2"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "~0.900.2",
