--- a/tsconfig.json
+++ b/tsconfig.json
@@ -20,9 +20,9 @@
       "dom"
     ],
     "paths": {
-      "ng2-daterangepicker": [
-        "dist/ng2-daterangepicker/ng2-daterangepicker",
-        "dist/ng2-daterangepicker"
+      "ng2-daterangepicker-plus": [
+        "dist/ng2-daterangepicker-plus/ng2-daterangepicker",
+        "dist/ng2-daterangepicker-plus"
       ]
     }
   },
